--- a/modules/WebHUD/static/css/style.css
+++ b/modules/WebHUD/static/css/style.css
@@ -60,7 +60,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    z-index: 980;
+    z-index: 580;
     padding: 0 0 3px;
     margin-right: 20px;
 }
@@ -143,7 +143,7 @@
     right: 25%;
     width: 50%;
     transition: all .2s ease-in-out;
-    z-index: 980;
+    z-index: 990;
 }
 .modal-header .close {
     font-size: 16px;
